--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
+    "react-scripts": "^4.0.3",
+    "readline": "^1.3.0",
+    "sweet-alert": "^2.0.5",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-sweetalert2": "^5.0.5",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
