--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@firebase/storage-compat": "^0.1.21",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
@@ -17,6 +18,7 @@
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "firebase": "^9.13.0",
     "react-scripts": "^4.0.3",
     "readline": "^1.3.0",
     "sweet-alert": "^2.0.5",
