--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sweet-alert": "^2.0.5",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-slick-carousel": "^1.0.6",
     "vue-sweetalert2": "^5.0.5",
     "vuex": "^3.6.2"
   },
